Corrección biografía de Susana

--- a/_pages/bioSusana.html
+++ b/_pages/bioSusana.html
@@ -1,11 +1,9 @@
 ---
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Biografía de Susana</title>
-</head>
-<body>
+layout: page
+title: Nombre
+---
+
+<div>
 
   <h1>Susana Angarita Vásquez</h1>
 <subtitle>Editora e Investigadora</subtitle>
@@ -40,7 +38,4 @@
     <li>Ensayo</li>
     <li>Narrativa contemporánea</li>
   </ul>
-
-</body>
-</html>
----
+</div>
