Corrección 2 de Biografía de Susana

--- a/_pages/bioSusana.html
+++ b/_pages/bioSusana.html
@@ -7,7 +7,7 @@ title: Nombre
 
   <h1>Susana Angarita Vásquez</h1>
 <subtitle>Editora e Investigadora</subtitle>
-  <p><strong>ORCID:</strong> <a href="https://orcid.org/0009-0000-6711-9362"></a></p>
+  <p><strong>ORCID:</strong> <a>https://orcid.org/0009-0000-6711-9362</a></p>
   <p><strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?hl=es&user=efhTJYEAAAAJ">Perfil en Google Scholar</a></p>
 
 <img src="/assets/0dbce957-d9c7-4df6-895a-df41b8e528ef.JPG" alt="Foto de perfil" width="150">
