--- a/_pages/notaEditorial.html
+++ b/_pages/notaEditorial.html
@@ -5,27 +5,27 @@ title: Nota Editorial
 
 <div>
   <h1>Nota Editorial</h1>
-  <p><strong>Proyecto de edici&oacute;n digital de la Universidad Pontificia Bolivariana.</strong><br>
-  Pregrado en Estudios Literarios, clase de Humanidades Digitales.</p>
+  <p><strong>Proyecto de edición digital de la Universidad Pontificia Bolivariana.</strong><br>
+  Pregrado en Estudios Literarios, clase de Humanidades Digitales.</p> 
 
-  <p>Esta edici&oacute;n digital de <em>Luz y sombra</em>, de la escritora colombiana Soledad Acosta de Samper (1833&ndash;1913), con fecha de publicaci&oacute;n del Siglo XIX, forma parte de un proyecto de Humanidades Digitales desarrollado por estudiantes del pregrado en Estudios Literarios
-    de la Universidad Pontificia Bolivariana, sede Medell&iacute;n. 
-    El objetivo es enriquecer el acceso a obras fundamentales del canon literario latinoamericano desde una perspectiva cr&iacute;tica e interdisciplinar, combinando la edici&oacute;n textual con herramientas digitales y enfoques contempor&aacute;neos de an&aacute;lisis literario.</p>
+  <p>Esta edición digital de <em>Luz y sombra</em>, de la escritora colombiana Soledad Acosta de Samper (1833&ndash;1913), con fecha de publicación del Siglo XIX, forma parte de un proyecto de Humanidades Digitales desarrollado por estudiantes del pregrado en Estudios Literarios
+    de la Universidad Pontificia Bolivariana, sede Medellín.
+    El objetivo es enriquecer el acceso a obras fundamentales del canon literario latinoamericano desde una perspectiva crítica e interdisciplinar, combinando la edición textual con herramientas digitales y enfoques contemporáneos de análisis literario.</p>
 
-  <p><em>Luz y sombra</em> es una narraci&oacute;n emblem&aacute;tica del siglo XIX hispanoamericano, en la que se conjugan la sensibilidad rom&aacute;ntica, la observaci&oacute;n costumbrista y una cr&iacute;tica incipiente al rol de la mujer en la sociedad patriarcal. 
-    A trav&eacute;s de la figura tr&aacute;gica de Aureliana, una mujer cuya vida gira en torno a su belleza, la autora advierte sobre los riesgos de una existencia construida en funci&oacute;n de la vanidad y el deseo ajeno. El cuento, narrado desde el punto de vista de Mercedes, 
-    se convierte en un testimonio &iacute;ntimo y reflexivo sobre el paso del tiempo, el amor no correspondido, y la soledad como consecuencia del olvido social.</p>
+  <p><em>Luz y sombra</em> es una narración emblemática del siglo XIX hispanoamericano, en la que se conjugan la sensibilidad romántica, la observación costumbrista y una crítica incipiente al rol de la mujer en la sociedad patriarcal. 
+    A través de la figura trágica de Aureliana, una mujer cuya vida gira en torno a su belleza, la autora advierte sobre los riesgos de una existencia construida en función de la vanidad y el deseo ajeno. El cuento, narrado desde el punto de vista de Mercedes, 
+    se convierte en un testimonio íntimo y reflexivo sobre el paso del tiempo, el amor no correspondido, y la soledad como consecuencia del olvido social.</p>
 
-  <p>Siendo un proyecto de edici&oacute;n digital colectivo, cada estudiante fue encargado de revisar y corregir una parte del texto, as&iacute; como de complementar los comentarios del mismo para una mayor completitud y aclaraci&oacute;n del texto; de manera que, como estudiantes, 
-    tomamos varias decisiones en el proceso, como, por ejemplo: mantuvimos las palabras en idioma original sin comillas para mantener la originalidad del texto y la naturalidad de la autora. Adem&aacute;s, cada uno fue encargado con una responsabilidad de comentar y editar el texto en plataformas HTML, 
-    crear su biograf&iacute;a en XML y no seguimos las l&iacute;neas del documento original en el proceso de marcado, con la intenci&oacute;n de permitir una mejor experiencia de lectura.</p>
+  <p>Siendo un proyecto de edición digital colectivo, cada estudiante fue encargado de revisar y corregir una parte del texto, así como de complementar los comentarios del mismo para una mayor completitud y aclaración del texto; de manera que, como estudiantes, 
+    tomamos varias decisiones en el proceso, como, por ejemplo: mantuvimos las palabras en idioma original sin comillas para mantener la originalidad del texto y la naturalidad de la autora. Además, cada uno fue encargado con una responsabilidad de comentar y editar el texto en plataformas HTML, 
+    crear su biografía en XML y no seguimos las líneas del documento original en el proceso de marcado, con la intención de permitir una mejor experiencia de lectura.</p>
 
-  <p>Sobre el sistema de codificaci&oacute;n digital, utilizamos diferentes etiquetas de nombramiento para diferentes elementos, como: <code>&lt;name type="person"&gt;</code> para se&ntilde;alar un nombre propio; <code>&lt;name type="place"&gt;</code> para se&ntilde;alar un lugar;
-    <code>&lt;name type="country"&gt;</code> para se&ntilde;alar un pa&iacute;s; <code>&lt;/corr&gt;</code> para se&ntilde;alar correcciones hechas dentro del texto; y, <code>&lt;p&gt;</code> para se&ntilde;alar un p&aacute;rrafo, entre otros de estos c&oacute;digos b&aacute;sicos en la marcaci&oacute;n del texto. 
-    Finalmente, en la p&aacute;gina en la que se encuentra esta edici&oacute;n digital de <em>Luz y sombra</em>, pueden encontrar las biograf&iacute;as y aportes de cada uno de los integrantes del equipo de trabajo, as&iacute; como, algunos comentarios realizados por cada uno de ellos para construir 
-    una imagen m&aacute;s integral del proceso de edici&oacute;n digital.</p>
+  <p>Sobre el sistema de codificación digital, utilizamos diferentes etiquetas de nombramiento para diferentes elementos, como: "<code>&lt;name" "type="person"&gt;</code>" para señalar un nombre propio; "<code>&lt;name" "type="place"&gt;</code>" para señalar un lugar;
+    "<code>&lt;name" "type="country"&gt;</code>" para señalar un país; "<code>&lt;/corr&gt;</code>" para señalar correcciones hechas dentro del texto; y, "<code>&lt;p&gt;</code>" para señalar un párrafo, entre otros de estos códigos básicos en la marcación del texto. 
+    Finalmente, en la página en la que se encuentra esta edición digital de <em>Luz y sombra</em>, pueden encontrar las biografías y aportes de cada uno de los integrantes del equipo de trabajo, así como, algunos comentarios realizados por cada uno de ellos para construir 
+    una imagen más integral del proceso de edición digital.</p>
 
   <div class="authors">
-    Susana Angarita V&aacute;squez<br>
-    Daniela Uribe Vel&aacute;squez
+    Susana Angarita Vásquez<br>
+    Daniela Uribe Velásquez
   </div>
