--- a/_pages/reseñaCrítica01.html
+++ b/_pages/reseñaCrítica01.html
@@ -1,1 +1,40 @@
+---
+layout: page
+title: Reseña Crítica Sociocultural
+---
 
+<div>
+    <h1>Luz y Sombra</h1>
+    <div>
+        <p>de Soledad Acosta de Samper: Un Reflejo Sociocultural del Siglo XIX colombiano</p>
+    </div>
+    <div>
+        <p>Soledad Acosta de Samper, una prolífica escritora del siglo XIX en Colombia, dejó un legado literario que abarca novelas, cuentos, ensayos y obras de teatro. En el cuento “Luz y Sombra", 
+          Acosta de Samper ofrece una mirada crítica a la sociedad de su tiempo, explorando temas como la vanidad, el papel de la mujer y las consecuencias de una vida centrada en la apariencia. 
+          A través de la historia de Aureliana, la autora construye un relato que resuena con las tensiones socioculturales de la época.</p>
+    </div>
+    <div>
+        <p>"Luz y Sombra" se desarrolla en la Bogotá del siglo XIX, una sociedad que aún se estaba recuperando de las guerras de independencia y que luchaba por definir su identidad nacional. 
+          La obra refleja las tensiones entre la tradición y la modernidad, así como las normas sociales que dictaban el comportamiento de las mujeres. La Semana Santa, descrita al inicio del cuento, 
+          era una época en la que se mezclaban los sentimientos religiosos con los acontecimientos políticos, lo que evidencia la fuerte influencia de la Iglesia en la sociedad de la época. Acosta de Samper, 
+          considerada una pionera del feminismo en Colombia, utiliza su escritura para comentar sobre el papel de las mujeres en la sociedad. En "Luz y Sombra", la autora critica implícitamente las limitaciones 
+          impuestas a las mujeres de su tiempo, que a menudo eran valoradas principalmente por su belleza y encanto. Aureliana, la protagonista, es presentada como una mujer hermosa y admirada, pero también 
+          como una víctima de las expectativas sociales que la encasillan en un papel superficial.</p>
+    </div>
+    <div>
+        <p>Desde la perspectiva de la sociología de la literatura, "Luz y Sombra" puede leerse como un documento social que revela las estructuras de poder y las relaciones de género en el siglo XIX colombiano. 
+          La obra ilustra cómo las normas sociales pueden influir en la vida de las personas, especialmente de las mujeres, y cómo la búsqueda de la aprobación social puede llevar a la alienación y la infelicidad. 
+          El cuento también aborda el tema de la clase social, aunque de manera implícita. Los personajes de la alta sociedad bogotana son descritos con detalle, mientras que los personajes de clase baja, como el 
+          esclavo negro que acompaña a Aureliana en su vejez, tienen un papel secundario. Esto refleja las jerarquías sociales de la época y la desigualdad en el acceso al poder y los recursos.</p>
+    </div>
+    <div>
+        <p>Aunque considero que el tema central de "Luz y Sombra" es la vanidad y sus devastadoras consecuencias. Aureliana, obsesionada con su belleza y la admiración de los demás, descuida su desarrollo personal 
+          e intelectual. Al envejecer y perder su atractivo físico, se enfrenta a la soledad y el abandono. Acosta de Samper utiliza la historia de Aureliana para transmitir una lección moral sobre la importancia 
+          de la educación y la virtud, en contraposición a la superficialidad y la vanidad. Por lo que, es posible afirmar, que "Luz y Sombra" de Soledad Acosta de Samper es una obra que trasciende su contexto 
+          histórico y sigue siendo relevante en la actualidad. A través de su exploración de temas como la vanidad, el papel de la mujer y las relaciones sociales, la autora ofrece una visión crítica de la sociedad 
+          del siglo XIX colombiano. Su obra no solo es un testimonio de la época, sino también una reflexión sobre la condición humana y los peligros de una vida centrada en la apariencia.</p>
+    </div>
+  <div>
+        <p>Reseña escrita por Susana Angarita Vásquez</p>
+    </div>
+</div>
