--- a/_pages/bioSalome.html
+++ b/_pages/bioSalome.html
@@ -4,9 +4,32 @@ title: Biografía de Salomé
 ---
 
 <div>
-Curso actualmente el pregrado de estudios literarios en la UPB, planeo escoger el enfasis de creación, medios y edición. 
 
+<h1>María Salomé Ospina</h1>
+<br>
 
+FOTO
+<br>
+<h2>ORCID</h2>
+<P>https://orcid.org/0009-0007-8211-2303</P>
 
+<h2>Google Scholar</h2>
+<p>https://scholar.google.com/citations?user=ci1m1JgAAAAJ&hl=es</p>
+
+<h2>Descripción academica</h2>
+<p>Curso actualmente el pregrado de Estudios Literarios en la Universidad Pontificia Bolivariana, enfocandome en el enfasis de creación, medios y edición.</p>
+
+<h2>Idiomas</h2>
+<li>Español</li>
+
+<h2>Intereses académicos</h2>
+<li>Feminismo</li>
+<li>Crítica literaria</li>
+
+<h2>Intereses literarios</h2>
+<li>Cuentos</li>
+<li>Poemas</li>
+<li>Ensayos literarios</li>
+<li>Novelas</li>
     
 </div>
