Ajustes nota editorial

--- a/_pages/notaEditorial.html
+++ b/_pages/notaEditorial.html
@@ -8,7 +8,7 @@ title: Nota Editorial
   <p><strong>Proyecto de edición digital de la Universidad Pontificia Bolivariana.</strong><br>
   Pregrado en Estudios Literarios, clase de Humanidades Digitales.</p> 
 
-  <p>Esta edición digital de <em>Luz y sombra</em>, de la escritora colombiana Soledad Acosta de Samper (1833&ndash;1913), con fecha de publicación del Siglo XIX, forma parte de un proyecto de Humanidades Digitales desarrollado por estudiantes del pregrado en Estudios Literarios
+  <p>Esta edición digital de <em>Luz y sombra</em>, de la escritora colombiana Soledad Acosta de Samper (1833-1913), con fecha de publicación del Siglo XIX, forma parte de un proyecto de Humanidades Digitales desarrollado por estudiantes del pregrado en Estudios Literarios
     de la Universidad Pontificia Bolivariana, sede Medellín.
     El objetivo es enriquecer el acceso a obras fundamentales del canon literario latinoamericano desde una perspectiva crítica e interdisciplinar, combinando la edición textual con herramientas digitales y enfoques contemporáneos de análisis literario.</p>
 
@@ -20,12 +20,12 @@ title: Nota Editorial
     tomamos varias decisiones en el proceso, como, por ejemplo: mantuvimos las palabras en idioma original sin comillas para mantener la originalidad del texto y la naturalidad de la autora. Además, cada uno fue encargado con una responsabilidad de comentar y editar el texto en plataformas HTML, 
     crear su biografía en XML y no seguimos las líneas del documento original en el proceso de marcado, con la intención de permitir una mejor experiencia de lectura.</p>
 
-  <p>Sobre el sistema de codificación digital, utilizamos diferentes etiquetas de nombramiento para diferentes elementos, como: "<code>&lt;name" "type="person"&gt;</code>" para señalar un nombre propio; "<code>&lt;name" "type="place"&gt;</code>" para señalar un lugar;
-    "<code>&lt;name" "type="country"&gt;</code>" para señalar un país; "<code>&lt;/corr&gt;</code>" para señalar correcciones hechas dentro del texto; y, "<code>&lt;p&gt;</code>" para señalar un párrafo, entre otros de estos códigos básicos en la marcación del texto. 
+  <p>Sobre el sistema de codificación digital, utilizamos diferentes etiquetas de nombramiento para diferentes elementos, como: "<code>name type="person"</code>" para señalar un nombre propio; "<code>name type="place"</code>" para señalar un lugar;
+    "<code>name type="country"</code>" para señalar un país; "<code>corr</code>" para señalar correcciones hechas dentro del texto; y, "<code>p</code>" para señalar un párrafo, entre otros de estos códigos básicos en la marcación del texto. 
     Finalmente, en la página en la que se encuentra esta edición digital de <em>Luz y sombra</em>, pueden encontrar las biografías y aportes de cada uno de los integrantes del equipo de trabajo, así como, algunos comentarios realizados por cada uno de ellos para construir 
     una imagen más integral del proceso de edición digital.</p>
 
-  <div class="authors">
-    Susana Angarita Vásquez<br>
-    Daniela Uribe Velásquez
+  
+    <p>Susana Angarita Vásquez</p>
+    <p>Daniela Uribe Velásquez</p>
   </div>
