actualización de bios

--- a/_pages/bioSimon.html
+++ b/_pages/bioSimon.html
@@ -6,7 +6,7 @@ title: nombre
 
 <h1>Simón Bolívar-Serna</h1>
 <br>
-FOTO
+ <img src="/assets/foto_Simon_Bolivar.jpg" alt="Foto de Simón Bolívar-Serna" width="150">
 <br>
 
 <h2>ORCID</h2>
