--- a/_pages/bioSimon.html
+++ b/_pages/bioSimon.html
@@ -17,7 +17,7 @@ title: Biografía de Simón
 
 <h2>Descripicón académica</h2>
 <p>Estudio Ciencias Políticas en la Universidad Nacional de Colombia y Estudios Literarios en la Universidad Pontificia Bolivariana. Me he enfocado en la investigación académica, la teoría política y la teoría crítica. </p>
-<P>He publicado un artículo de investigación en la revista Ratio Juris de la Universidad Autónoma Latinoamericana y una reseña en el boletín de la Asociación Colombiana de Ciencia Política.</P>
+<P>He publicado un artículo de investigación de Ciencia Política en la revista Ratio Juris de la Universidad Autónoma Latinoamericana y dos reseñas críticas en boletines de la Asociación Colombiana de Ciencia Política.</P>
 
 <h2>Idiomas:</h2>
 <li>Español</li>
