--- a/_pages/bioSalome.html
+++ b/_pages/bioSalome.html
@@ -8,7 +8,7 @@ title: Biografía de Salomé
 <h1>María Salomé Ospina</h1>
 <br>
 
-<img src="/assets/20250506_162839.jpg" alt="Foto de María Salomé Ospina" width="150">
+<img src="/assets/Foto_Salome.webp" alt="Foto de María Salomé Ospina" width="150">
 <br>
 <h2>ORCID</h2>
 <P>https://orcid.org/0009-0007-8211-2303</P>
